Switched nativeFormat back to application/octet-stream to support existing WCS-2.0 code because the current branch is broken and will not build a functioning WCS I need to hack this in for now so the older code will accpet the merr2 CDs gen'd by Uday's ant targets.

--- a/resources/WCS/2.0/templates/MERRA2_400.tavgM_2d_int_Nx.201600.nc4.xml
+++ b/resources/WCS/2.0/templates/MERRA2_400.tavgM_2d_int_Nx.201600.nc4.xml
@@ -78,6 +78,7 @@
     </gmlcov:rangeType>
     <wcs:ServiceParameters>
       <wcs:CoverageSubtype>RectifiedGridCoverage</wcs:CoverageSubtype>
-      <wcs:nativeFormat>application/vnd.opendap.dap4.data</wcs:nativeFormat>
+      <!-- wcs:nativeFormat>application/vnd.opendap.dap4.data</wcs:nativeFormat -->
+      <wcs:nativeFormat>application/octet-stream</wcs:nativeFormat>
     </wcs:ServiceParameters>
   </wcs:CoverageDescription>
