--- a/resources/WCS/2.0/templates/MERRA2_M2SDNXSLV.xml
+++ b/resources/WCS/2.0/templates/MERRA2_M2SDNXSLV.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <wcs:CoverageDescription xmlns="http://www.opengis.net/gml/3.2" xmlns:wcs="http://www.opengis.net/wcs/2.0" xmlns:gml="http://www.opengis.net/gml/3.2" xmlns:swe="http://www.opengis.net/swe/2.0" xmlns:gmlcov="http://www.opengis.net/gmlcov/1.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" gml:id="@MERRA2DATASET@" xsi:schemaLocation="http://www.opengis.net/wcs/2.0 http://schemas.opengis.net/wcs/2.0/wcsAll.xsd http://www.opengis.net/gml/3.2 http://schemas.opengis.net/gml/3.2.1/gml.xsd http://www.opengis.net/gmlcov/1.0 http://schemas.opengis.net/gmlcov/1.0/gmlcovAll.xsd http://www.opengis.net/swe/2.0 http://schemas.opengis.net/sweCommon/2.0/swe.xsd">
     <boundedBy>
-        <EnvelopeWithTimePeriod srsName="urn:ogc:def:crs:EPSG::4326" axisLabels="latitude longitude" uomLabels="deg deg" srsDimension="2">
+        <EnvelopeWithTimePeriod
+                srsName="urn:ogc:def:crs:EPSG::4326"
+                axisLabels="latitude longitude"
+                uomLabels="deg deg"
+                srsDimension="2">
             <lowerCorner>-90.00 -180.00</lowerCorner>
             <upperCorner>90.00 179.375</upperCorner>
             <beginPosition>@START_DATE@T@START_TIME@Z</beginPosition>
